@@ -1,81 +1,73 @@
 findbugs.dir=../findbugs
 bin.includes = FindBugs.png,\
-               RELEASENOTES,\
-               about.html,\
-               about.ini,\
-               about.properties,\
-               annotations.jar,\
-               bcel.jar,\
-               jsr305.jar,\
-               dom4j-full.jar,\
-               findbugs-plugin.jar,\
-               findbugs.jar,\
-               icons/,\
-               plugin/,\
-               plugin.properties,\
-               plugin.xml,\
-               smallBuggy.png,\
-               plugin_fr.properties,\
-               plugin_ja.properties,\
-               welcome.xml,\
-               asm-tree-3.0.jar,\
-               asm-3.0.jar,\
-               asm-commons-3.0.jar,\
-               findbugs-ant.jar,\
-               META-INF/,\
-               asm-3.1.jar,\
-               asm-commons-3.1.jar,\
-               asm-tree-3.1.jar,\
-               dom4j-1.6.1.jar,\
-               jaxen-1.1.1.jar,\
-               surelogic.png,\
-               umdFindbugs.png
+			   RELEASENOTES,\
+			   about.html,\
+			   about.ini,\
+			   about.properties,\
+			   annotations.jar,\
+			   bcel.jar,\
+			   jsr305.jar,\
+			   findbugs-plugin.jar,\
+			   findbugs.jar,\
+			   icons/,\
+			   plugin/,\
+			   plugin.properties,\
+			   plugin.xml,\
+			   smallBuggy.png,\
+			   plugin_fr.properties,\
+			   plugin_ja.properties,\
+			   welcome.xml,\
+			   findbugs-ant.jar,\
+			   META-INF/,\
+			   asm-3.1.jar,\
+			   asm-commons-3.1.jar,\
+			   asm-tree-3.1.jar,\
+			   dom4j-1.6.1.jar,\
+			   jaxen-1.1.1.jar,\
+			   surelogic.png,\
+			   umdFindbugs.png
 src.includes = .classpath,\
-               .project,\
-               .settings/,\
-               src/,\
-               FindBugs.png,\
-               RELEASENOTES,\
-               about.html,\
-               about.ini,\
-               about.properties,\
-               annotations.jar,\
-               bcel.jar,\
-               jsr305.jar,\
-               dom4j-full.jar,\
-               findbugs-plugin.jar,\
-               findbugs.jar,\
-               icons/,\
-               plugin/,\
-               plugin.properties,\
-               plugin.xml,\
-               smallBuggy.png,\
-               plugin_ja.properties,\
-               plugin_fr.properties,\
-               welcome.xml,\
-               asm-tree-3.0.jar,\
-               asm-3.0.jar,\
-               asm-commons-3.0.jar,\
-               META-INF/,\
-               .options,\
-               .fbprefs,\
-               build.properties,\
-               build.xml,\
-               buildtools/,\
-               doc/,\
-               .cvsignore,\
-               findbugsExclude.xml,\
-               plugin_feature-candidate.xml,\
-               plugin_feature-daily.xml,\
-               plugin_feature.xml,\
-               plugin_site.xml,\
-               umdFindbugs.png,\
-               asm-3.1.jar,\
-               asm-commons-3.1.jar,\
-               asm-tree-3.1.jar,\
-               dom4j-1.6.1.jar,\
-               jaxen-1.1.1.jar,\
-               surelogic.png
+			   .project,\
+			   .settings/,\
+			   src/,\
+			   FindBugs.png,\
+			   RELEASENOTES,\
+			   about.html,\
+			   about.ini,\
+			   about.properties,\
+			   annotations.jar,\
+			   bcel.jar,\
+			   jsr305.jar,\
+			   findbugs-plugin.jar,\
+			   findbugs.jar,\
+			   icons/,\
+			   plugin/,\
+			   plugin.properties,\
+			   plugin.xml,\
+			   smallBuggy.png,\
+			   plugin_ja.properties,\
+			   plugin_fr.properties,\
+			   welcome.xml,\
+			   META-INF/,\
+			   .options,\
+			   .fbprefs,\
+			   build.properties,\
+			   build.xml,\
+			   buildtools/,\
+			   doc/,\
+			   .cvsignore,\
+			   findbugsExclude.xml,\
+			   plugin_feature-candidate.xml,\
+			   plugin_feature-daily.xml,\
+			   plugin_feature.xml,\
+			   plugin_site.xml,\
+			   umdFindbugs.png,\
+			   asm-3.1.jar,\
+			   asm-commons-3.1.jar,\
+			   asm-tree-3.1.jar,\
+			   dom4j-1.6.1.jar,\
+			   jaxen-1.1.1.jar,\
+			   surelogic.png
 jars.compile.order = findbugs-plugin.jar
 source.findbugs-plugin.jar = src/,buildtools/
 output.findbugs-plugin.jar = bin/
