@@ -36,7 +36,7 @@
 
 	<path id="plugin.classpath">
 		<fileset dir="${eclipsePlugin.dir}">
-			<include name="org.eclipse*.jar"/>
+			<include name="**/*.jar"/>
 		</fileset>
 		<fileset file="findbugs.jar"/>
 		<fileset file="bcel.jar"/>
@@ -53,8 +53,8 @@
 	</path>
 
 	<!-- Need these jars for ant target 'srcdist', which uses
-	     subversion.  Grab them at:
-	     http://subclipse.tigris.org/files/documents/906/32898/svnant-1.0.0.zip -->
+		 subversion.  Grab them at:
+		 http://subclipse.tigris.org/files/documents/906/32898/svnant-1.0.0.zip -->
 	<path id="svn.classpath">
 		<pathelement location="${svnant.home}/lib/svnant.jar"/>
 		<pathelement location="${svnant.home}/lib/svnClientAdapter.jar"/>
@@ -152,7 +152,7 @@
 			<zipfileset prefix="${plugin.id}_${plugin.version}" dir="${dist.dir}" includes="**"/>
 		</zip>
 	</target>
-	
+
 	<!-- Build source distribution.  Must have 'svnant.home' set properly. -->
 	<target name="srcdist" depends="clean,classes,version">
 		<property file="${bin.dir}/plugininfo.properties"/>
@@ -163,8 +163,8 @@
 		<svn username="guest" password="" javahl="false">
 			<!-- Use 'export' rather than 'checkout' to exclude the .svn stuff -->
 			<export srcUrl="http://findbugs.googlecode.com/svn/trunk/eclipsePlugin"
-			        revision="HEAD"
-			        destPath="${dist.dir}/src/eclipsePlugin-${plugin.version}"/>
+					revision="HEAD"
+					destPath="${dist.dir}/src/eclipsePlugin-${plugin.version}"/>
 		</svn>
 
 		<zip destfile="${dist.dir}/eclipsePlugin-${plugin.version}-source.zip" compress="true">
